infra/k8s/route-django.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: django-route
  namespace: default
spec:
  parentRefs:
  - name: my-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: ExtensionRef
      extensionRef:
        group: cilium.io
        kind: CiliumExternalAuth
        name: ext-authz-idp-config
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        remove:
        - x-auth-request-user
        - x-auth-request-email
    backendRefs:
    - name: django-service
      port: 80
